--- a/config/bookmarks.yaml
+++ b/config/bookmarks.yaml
@@ -1,39 +1,7 @@
 ---
 # For configuration options and examples, please see:
 # https://gethomepage.dev/latest/configs/bookmarks
-- Linx OMS:
-    - LINX-CHAORDIC:
-        - icon: github-light.png
-          href: https://github.com/Linx-Enterprise/
-    - NEWOFFERS-ORDER:
-        - icon: github-light.png
-          href: https://github.com/Linx-Enterprise/oms-order-api
-    - COCKPIT:
-        - icon: github-light.png
-          href: https://github.com/chaordic/oms-cockpit
-    - AKS-ORDER:
-        - icon: github-light.png
-          href: https://github.com/Linx-Enterprise/aks-oms-order
-    - BUSCARRIER:
-        - icon: github-light.png
-          href: https://github.com/Linx-Enterprise?q=buscarrier&type=all&language=&sort=
-
 - Pedreiro-Digital-Studio:
-    - Eco Silence:
+    - Repositories:
         - icon: github-light.png
-          href: https://github.com/Pedreiro-Digital-Studio-Ltda/ecosilence
-    - Educa:
-        - icon: github-light.png
-          href: https://github.com/Pedreiro-Digital-Studio-Ltda/educa
-    - Football team manager:
-        - icon: github-light.png
-          href: https://github.com/Pedreiro-Digital-Studio-Ltda/cacador
-    - Api Core Development:
-        - icon: github-light.png
-          href: https://github.com/Pedreiro-Digital-Studio-Ltda/core-essence
-    - Vella Financial:
-        - icon:  gitlab.png
-          href: https://gitlab.com/vella-financial
-    - Jettbooking:
-        - icon: atlassian.png
-          href: https://bitbucket.org/jhonnymakis/surflessons
+          href: https://github.com/Pedreiro-Digital-Studio-Ltda/repositories
